--- a/src/home.components.html
+++ b/src/home.components.html
@@ -1,14 +1,14 @@
 <div class="container color-dark">
     <div class="col">
-        <p>Add a bucket list item</p>
+        <p>Agrega una cancion de ghost</p>
     </div>
     <div class="col">
-        <p>Your bucket list ({{ itemCount }})</p>
+        <p>Lista de cancniones ({{ itemCount }})</p>
     </div>
 </div>
 <div class="container color-light" [@goals]="goals.length">
     <div class="col">
-        <p class="sm"> Use this form below to add a new bucket list goal. What do you want to do</p>
+        <p class="sm"> Agrega el nombre de una cancion de ghost</p>
 
         <form>
             <input type="text" class="txt" name="item"  placeholder="Life goal..."[(ngModel)]="goalText">
